# ifcplusplus

./: CMakeLists.txt
IfcPlusPlus/: CMakeLists.txt
